# rust_gng

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  shell.nix
.github/workflows/: ci.yml
dataset_creator/: DatasetCreator.py  dataset_creator_blobs.py  dataset_creator_circles.py  shell.nix
examples/: run_jupyter_example.sh  run_python_example.sh  run_rust_example.sh  simple_usage.sh
examples/test_app_py/: test_app.ipynb  test_app.py
examples/test_app_rust/: Cargo.toml
examples/test_app_rust/src/: main.rs
gng_lib/: Cargo.toml
gng_lib/src/: lib.rs
gng_lib/src/data_structures/: input_set_params.rs  params.rs
gng_lib/src/gas/: core.rs
gng_lib/src/tests/: unit_tests.rs
gng_py/: Cargo.toml  test_app.ipynb  test_app.py
gng_py/src/: lib.rs
gng_py/src/data_structures/: model_params.rs  params.rs  train_params.rs
gng_py/src/ecs_tests/: mod.rs
gng_py/test_data/: calc_distance_order_T1.json  calc_neuronDist_T1.json  test_csv_values.csv  updateWeights_T1.json  updateWeights_T2.json
gng_py_lib/: Cargo.toml  shell.nix  test_app.py  test_app_2.ipynb
gng_py_lib/src/: lib.rs
gng_py_lib/src/data_structures/: mod.rs
gng_py_lib/src/ecs/: manager.rs
gng_py_lib/src/ecs_tests/: ecs_unit_tests.rs
gng_py_lib/src/gas/: json_reader.rs  json_writer.rs  rng_manager.rs
gng_py_lib/src/handlers/: mod.rs  sample_handler.rs  system_handler.rs
gng_py_lib/src/tests/: mod.rs  sample_handler_tests.rs  todo_tests.rs
gng_test_app/: Cargo.toml  input.json
gng_test_app/src/: main.rs
neural_gas_plotter/: input_set_plotter.py  neural_gas_plotter.py  shell.nix
(+86 files in other folders)
